--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.cdnfonts.com/css/brushfire');
 @import url('https://fonts.cdnfonts.com/css/capture-it');
+@font-face {
+    font-family: 'Invade';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Invade'), url('fonts/Invade-eZBZ6.woff') format('woff');
+}
 
 * {
     padding: 0;
@@ -9,7 +15,7 @@
 body {
     font-size: 18px;
     font-family: "brushfire", sans-serif;
-    background-color: #0c160a;
+    background-color: #213d47;
 }
 
 li {
@@ -28,7 +34,7 @@ a:hover {
 }
 
 nav {
-    background-color:#213d47;
+    background-color: #0c160a;
     padding: 10%;
     display: flex;
     gap: 40px;
@@ -38,22 +44,19 @@ nav {
 }
 
 span.logo a {
-    font-size: 48px;
+    font-size: 72px;
     color: #687687;
 }
 
 menu {
-    font-family: 'Capture it', sans-serif;
+    font-family: 'Invade';
+    position: relative;
 }
 
 button {
     background-color: transparent;
     border: 0px;
     font-family: 'Capture it', sans-serif;
-}
-
-#main-menu {
-
 }
 
 .display-flex {
@@ -63,7 +66,8 @@ button {
 
 .dropdown-menu {
     position: absolute;
-    background-color: #213d47;
+    background-color: #0c160a;
+    color: #a08ea7;
     padding: 5px;
     display: none;
 }
@@ -96,19 +100,126 @@ button {
     }
 }
 
+img {
+    max-width: 500px;
+}
+
+.height {
+    height: 10px;
+}
+
+/* Image-container design */
+.image-container {
+    max-width: 800px;
+    position: relative;
+    margin: auto;
+}
+
+.next {
+    right: 0;
+}
+
+/* Next and previous icon design */
+.previous,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    padding: 10px;
+    margin-top: -25px;
+}
+
+/* caption decorate */
+.captionText {
+    color: #000000;
+    font-size: 14px;
+    position: absolute;
+    padding: 12px 12px;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+.fa {
+    font-size: 32px;
+}
+
+.fa:hover {
+    transform: rotate(360deg);
+    transition: 1s;
+    color: white;
+}
+
+.footerdot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbbbbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.5s ease;
+}
+
+.active,
+.footerdot:hover {
+    background-color: black;
+}
+
 h1 {
-    font-size: 72px;
+    font-family: 'Capture it 2';
+    font-weight: lighter;
 }
 
 h2 {
-    font-family: 'Capture it 2', sans-serif;
+    font-family: 'Brushfire';
     background-color: #687687;
-    color: #0c160a;
+    color: #111910;
     margin: 10px;
     padding: 5px;
     align-content: center;
     width: 90%;
-    height: 200px;
-    align-content: center;
+    height: 250px;
+    letter-spacing: 0px;
+    font-size: 48px;
 }
 
+h3 {
+    font-family: 'Invade';
+    background-color: #687687;
+    color: #111910;
+    margin: 10px;
+    padding: 5px;
+    align-content: center;
+    width: 90%;
+    height: 90%;
+    align-content: center;
+    letter-spacing: 0px;
+    font-size: 18px;
+}
+
+.content { 
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    width: 500px; 
+    height: 200px; 
+    text-align: center; 
+    background-color: #e8eae6; 
+    box-sizing: border-box; 
+    padding: 10px; 
+    z-index: 100; 
+    display: none; 
+    /*to hide popup initially*/ 
+} 
+  
+.close-btn { 
+    position: absolute; 
+    right: 20px; 
+    top: 15px; 
+    background-color: black; 
+    color: white; 
+    border-radius: 50%; 
+    padding: 4px; 
+} 
