--- a/assets/styles.css
+++ b/assets/styles.css
@@ -179,7 +179,7 @@ h2 {
     padding: 5px;
     align-content: center;
     width: 90%;
-    height: 250px;
+    height: auto;
     letter-spacing: 0px;
     font-size: 48px;
 }
